--- a/excursionapp/templates/navbar.html
+++ b/excursionapp/templates/navbar.html
@@ -65,7 +65,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="email">Email:</label>
+                        <label for="email">{% trans "Email" %}:</label>
                         <input type="email" id="email" name="email" required>
                     </div>
                     
